include height in masp txs block index
